fix: change public method to private